--- a/script.skin.helper.backgrounds/resources/language/resource.language.it_it/strings.po
+++ b/script.skin.helper.backgrounds/resources/language/resource.language.it_it/strings.po
@@ -1,7 +1,7 @@
 # Kodi language file
 # Addon Name: Skin Helper Backgrounds
 # Addon id: script.skin.helper.backgrounds
-# Addon Provider: marcelveldt, YLLOW_DRAGON
+# Addon Provider: marcelveldt
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC-Addons\n"
@@ -10,7 +10,7 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE\n"
-"Language: ru_RU\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -18,192 +18,192 @@ msgstr ""
 
 msgctxt "#32000"
 msgid "Backgrounds"
-msgstr "Фоны"
+msgstr "Sfondi"
 
 msgctxt "#32001"
 msgid "Wall Backgrounds"
-msgstr "Стена фонов"
+msgstr "Sfondi Muro"
 
 msgctxt "#32002"
 msgid "Interval in seconds for rotating backgrounds (0 to disable)"
-msgstr "Интервал в сек. для поворота фонов (0 для откл.)"
+msgstr "Intervallo in secondi per la rotazione degli sfondi (0 per disabilitare)"
 
 msgctxt "#32003"
 msgid "Interval in seconds for rotating wall images (0 to disable)"
-msgstr "Интервал в сек. для поворота фона стены (0 для откл.)"
+msgstr "Intervallo in secondi per la rotazione delle immagini muro (0 per disabilitare)"
 
 msgctxt "#32004"
 msgid "Only use images from recordings for random PVR background"
-msgstr "Использовать фоны из записей для случайного фона PVR"
+msgstr "Usa solo le immagini dalle registrazioni per sfondi PVR casuali"
 
 msgctxt "#32005"
 msgid "Use custom path for random pictures background"
-msgstr "Использовать полз. путь для случайных фонов"
+msgstr "Usa percorso personalizzato per immagini di sfondo casuali"
 
 msgctxt "#32006"
-msgid "- Custom path:"
-msgstr "- Полз. путь:"
+msgid "Custom path:"
+msgstr "Percorso personalizzato:"
 
 msgctxt "#32007"
 msgid "Maximum number of wall images to create for each background"
-msgstr "Макс. количество стен фонов созданных для каждого фона"
+msgstr "Numero massimo di immagini muro per creare ogni sfondo"
 
 msgctxt "#32008"
 msgid "Clear cache (rebuild all wall images)"
-msgstr "Очистить кэш (перестроить все стены фонов)"
+msgstr "Pulisci la cache (ricostrusci tutte le immagini muro)"
 
 msgctxt "#32009"
 msgid "Global media fanart background"
-msgstr "Глобальный медиа фанарт фон"
+msgstr "Sfondo globale fanart media"
 
 msgctxt "#32010"
 msgid "Random movies background"
-msgstr "Фон случайные фильмы"
+msgstr "Sfondo film casuale"
 
 msgctxt "#32011"
 msgid "Recent movies background"
-msgstr "Фон последние фильмы"
+msgstr "Sfondo film recenti"
 
 msgctxt "#32012"
 msgid "In progress movies background"
-msgstr "Фон просматриваемые фильмы"
+msgstr "Sfondo film in corso"
 
 msgctxt "#32013"
 msgid "Unwatched movies background"
-msgstr "Фон непросмотренные фильмы"
+msgstr "Sfondo film non visti"
 
 msgctxt "#32014"
 msgid "Random Tv Shows background"
-msgstr "Фон случайные сериалы"
+msgstr "Sfondo Serie TV casuali"
 
 msgctxt "#32015"
 msgid "Recent episodes background"
-msgstr "Фон последние эпизоды"
+msgstr "Sfondo episodi recenti"
 
 msgctxt "#32016"
 msgid "In progress Tv Shows background"
-msgstr "Фон просматриваемые сериалы"
+msgstr "Sfondo Serie TV in corso"
 
 msgctxt "#32017"
 msgid "Random pictures background"
-msgstr "Фон случайные картинки"
+msgstr "Sfondo immagini casuali"
 
 msgctxt "#32018"
 msgid "Random music videos background"
-msgstr "Фон случайное муз. видео"
+msgstr "Sfondo Video musicali casuali"
 
 msgctxt "#32019"
 msgid "Random music artists background"
-msgstr "Фон случайный муз. артист"
+msgstr "Sfondo Artisti musicali casuali"
 
 msgctxt "#32020"
 msgid "Top rated Movies (extendedinfo)"
-msgstr "Фильмы с высоким рейтингом (extendedinfo)"
+msgstr "Film più votati (extendedinfo)"
 
 msgctxt "#32021"
 msgid "Top Rated tvshows (extendedinfo)"
-msgstr "Сериалы с высоким рейтингом (extendedinfo)"
+msgstr "Serie TV più votate (extendedinfo)"
 
 msgctxt "#32022"
 msgid "Random songs background"
-msgstr "Фон случайные песни"
+msgstr "Sfondo brani casuali"
 
 msgctxt "#32023"
 msgid "Recent albums background"
-msgstr "Фон последние альбомы"
+msgstr "Sfondo album recenti"
 
 msgctxt "#32024"
 msgid "Random PVR background"
-msgstr "Фон случайные PVR"
+msgstr "Sfondo PVR casuale"
 
 msgctxt "#32025"
 msgid "Global videos background"
-msgstr "Фон глобальное видео"
+msgstr "Sfondo video globale"
 
 msgctxt "#32026"
 msgid "Global Movies & TvShows background"
-msgstr "Фон глобальные фильмы и сериалы"
+msgstr "Sfondo Film e Serie TV globale"
 
 msgctxt "#32027"
 msgid "Recent videos background"
-msgstr "Фон последнее видео"
+msgstr "Sfondo video recenti"
 
 msgctxt "#32028"
 msgid "In-progress videos background"
-msgstr "Фон просматриваемое видео"
+msgstr "Sfondo video in corso"
 
 msgctxt "#32029"
 msgid "Wall"
-msgstr "Стена"
+msgstr "Muro"
 
 msgctxt "#32030"
 msgid "Poster Wall"
-msgstr "Стена постеров"
+msgstr "Poster Muro"
 
 msgctxt "#32031"
 msgid "Black & White"
-msgstr "Черно-белый"
+msgstr "Bianco e Nero"
 
 msgctxt "#32032"
 msgid "Error while writing changes. Make sure you have filled in all fields correctly."
-msgstr "Ошибка при записи изменений. Убедитесь, что вы заполнили все поля правильно."
+msgstr "Errore durante la scrittura. Accertati che hai compilato tutti i campi correttamente."
 
 msgctxt "#32058"
 msgid "Please enter a name for your conditional background"
-msgstr "Пожалуйста, введите имя для условного фона"
+msgstr "Per favore immetti un nome per il tuo sfondo condizionale"
 
 msgctxt "#32061"
 msgid "Please select a background image"
-msgstr "Пожалуйста, выберите фон"
+msgstr "Per favore seleziona un'immagine di sfondo"
 
 msgctxt "#32064"
 msgid "Do you want to setup a single background or a folder with multiple backgrounds ?"
-msgstr "Вы хотите настроить один фон или папку с несколькими фонами ?"
+msgstr "Vuoi configurare un singolo sfondo o una cartella con sfondi multipli?"
 
 msgctxt "#32065"
 msgid "Single"
-msgstr "Один"
+msgstr "Singolo"
 
 msgctxt "#32066"
 msgid "Multiple"
-msgstr "Несколько"
+msgstr "Multiplo"
 
 msgctxt "#32067"
 msgid "Select image folder path"
-msgstr "Выбрать путь к папке фона"
+msgstr "Seleziona il percorso cartella immagine"
 
 msgctxt "#32070"
 msgid "Conditional backgrounds"
-msgstr "Условные фоны"
+msgstr "Sfondi condizionali"
 
 msgctxt "#32071"
 msgid "Configure conditional backgrounds"
-msgstr "Настройка условных фонов"
+msgstr "Configura sfondi condizionali"
 
 msgctxt "#32072"
 msgid "Setup backgrounds that will be activated on specified dates"
-msgstr "Настройка фонов, которые будут активированы на указанные даты"
+msgstr "Configura sfondi che saranno attivati su una data specifica"
 
 msgctxt "#32073"
 msgid "Add new condition..."
-msgstr "Добавить новое условие..."
+msgstr "Aggiungi nuova condizione..."
 
 msgctxt "#32074"
 msgid "Add a new condition to activate a custom background on a selected timespan"
-msgstr "Добавить новое условие для активации пользовательского фона на выбранный отрезок времени"
+msgstr "Aggiungi una nuova condizione per attivare uno sfondo personalizzato su un arco di tempo specifico"
 
 msgctxt "#32075"
 msgid "Delete or change ?"
-msgstr "Удалить или изменить ?"
+msgstr "Cancella o cambia?"
 
 msgctxt "#32076"
 msgid "Do you want to delete or change the existing entry ?"
-msgstr "Вы хотите удалить или изменить существующую запись ?"
+msgstr "Vuoi cancellare o cambiare la entry esistente?"
 
 msgctxt "#32077"
 msgid "Change"
-msgstr "Изменить"
+msgstr "Cambia"
 
 msgctxt "#32078"
 msgid "Delete"
-msgstr "Удалить"
+msgstr "Cancella"
