--- a/script.module.metadatautils/resources/language/resource.language.en_gb/strings.po
+++ b/script.module.metadatautils/resources/language/resource.language.en_gb/strings.po
@@ -255,3 +255,11 @@ msgstr ""
 msgctxt "#32060"
 msgid "Limit number of extrafanarts to download (0 is no limit)"
 msgstr ""
+
+msgctxt "#32061"
+msgid "Personal developer API-key for TheAudioDb"
+msgstr ""
+
+msgctxt "#32062"
+msgid "Limit number of extraposters to download (0 is no limit)"
+msgstr ""
