--- a/skin.titan.vanilla/language/resource.language.en_gb/strings.po
+++ b/skin.titan.vanilla/language/resource.language.en_gb/strings.po
@@ -3149,3 +3149,7 @@ msgstr ""
 msgctxt "#31920"
 msgid "Use alternate episode name (Tvheadend)"
 msgstr ""
+
+msgctxt "#31921"
+msgid "Origin"
+msgstr ""
